syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeRequest {
  int32 number_to_decompose = 1;
}

message PrimeResponse {
  int32 result = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeRequest) returns (stream PrimeResponse) {};

  // error handling
  // this rpc will throw an exception if the sent number is negative
  // the exception being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
